# my-uni-courses

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  index.html  index.md  mkdocs.yml  sitemap.xml
.github/: main.yml
.github/workflows/: main.yml
BME5706/03/: plot1.ps  plot10.ps  plot2.ps  plot3.ps  plot4.ps  plot5.ps  plot8.ps  plot9.ps
BME5706/04/: hw1.m
BME5706/06/: hw2.m
BME5706/07/: app1.mlapp
BME5706/08/: hw1.m
CE1001/: A02.py  A04-1.py  A12.cpp  E02-2.py
CE1001/src/: score.txt  stu_id_2.txt
CE1002/: A03.java  A05.java  A08.java  A11.java  A12_1.java  A12_2.java  P11.cpp
CE1002/A07/: A07.java
CE1002/src/: ox2.txt
CE1003/: P03.py  P05.py  P08.cpp  P09.cpp
CE1004/: P01.java  P02.java  P03.java  P04.java  P05.java  P06.java  P12.java
LICENSE/: index.html
MA1003/: Ex06.py
PH1031/: Ex04.py  FinalProject.py
ap/: README.md
docs/: index.md
freshman/: README.md  index.html  index.md
junior/: index.html
se/se6029/mob-programming/self-practice/01-guinea-pig-car-car-cpp/: CMakeLists.txt  README.md  build.sh
se/se6029/mob-programming/self-practice/01-guinea-pig-car-car-cpp/inc/: ambulance.h  car.h  guinea_pig.h  guinea_pig_car_car.h  police_car.h  run_run_guinea_pig_car_car_race.h  trash_truck.h
se/se6029/mob-programming/self-practice/01-guinea-pig-car-car-cpp/src/: ambulance.cpp  car.cpp  guinea_pig.cpp  guinea_pig_car_car.cpp  main.cpp  police_car.cpp  run_run_guinea_pig_car_car_race.cpp  trash_truck.cpp
search/: search_index.json
senior/: README.md  index.html  index.md
sophomore/: README.md  index.html  index.md
(+3336 files in other folders)
